--- a/discounts-service/k8s-manifest/deployment.yaml
+++ b/discounts-service/k8s-manifest/deployment.yaml
@@ -28,6 +28,7 @@ spec:
     spec:
       containers:
       - image: abitvolatile/discounts-service:1.0.1
+        imagePullPolicy: IfNotPresent
         name: discounts
         command: ["ddtrace-run"]
         args: ["flask", "run", "--port=5001", "--host=0.0.0.0"]
